1998-06-28  Alex Roberts  <bse@dial.pipex.com>

	* Removed instances of main_window from gE_file_open and gE_file_save,
	  and fixed the functions to match with their definitions in main.h...

1998-06-26 and 27  Evan Lawrence  <evan@worldpath.net>

	Sifted through all the code and removed all instances of the global
	main_window variable, replacing them with either a gE_window pointer
	or a gE_data pointer. Also added functions to open and close other
	windows, so you don't have to run a separate copy of gedit - still to
	be added are functions to move documents between windows, etc.
	
1998-06-26  Chris Lahey  <clahey@umich.edu>

	* Makefile.am : 
	* main.h :
	* gedit.c : 
	* gE_document.c (gE_window_new): Plugins are now compiled in by
	default.  Dropped the hello-plugin.

	* configure.in: Checks for gedit.c instead of menus.c.  More unique.

	* plugin.c (process_command): 
	(plugin_finish): File descriptors for plugins are now freed and gedit doesn't
	leave zombie processes.

1998-06-26  Chris Lahey  <clahey@umich.edu>

	* plugin.h: 
	* plugin.c (process_command, plugin_register, process_next): 
	A bit of plugin API expansion.  Broke up the structs a bit.

	* gE_document.c: 
	* gE_plugin_api.h: 
	* gE_plugin_api.c:
	Using those changes.
	
	* client.c:
	* client.h:
	New files defining the new plugin client API.

	* diff.c (main): 
	(call_diff): 
	* cvsdiff.c (main):
	Changes to use the new plugin client API.

1998-06-25  Chris Lahey  <clahey@umich.edu>

	* gE_plugin_api.c: 
	* gE_plugin_api.h: New files.  The callback functions for the
	plugin api.
	
	* cvsdiff.c: New file.  The plugin to do a cvs diff.

	* gE_document.c: 
	* gedit.c:
	* main.h: 
	* plugin.h: 
	* plugin.c: 
	* diff.c: 
	* Makefile.am (gedit_SOURCES):
	More changes to support the plugin system.

1998-06-25  Chris Lahey  <clahey@umich.edu>

	* plugin.h, plugin.c: Lot's of new API.

	* diff.c: New file.  A plugin to do diffs.

1998-06-xx  Andy Kahn <kahn@zk3.dec.com>
 